--- a/templates/items/parts/item-modifiers.html
+++ b/templates/items/parts/item-modifiers.html
@@ -56,8 +56,13 @@
                         {{lookup ../config.abilities modifier.valueAffected}}
                     {{else if (eq modifier.effectType "ability-check")}}
                         {{lookup ../config.abilities modifier.valueAffected}}
+
+                    <!--/Alternaity change-->
                     {{else if (eq modifier.effectType "ability-score")}}
-                        {{lookup ../config.abilities modifier.valueAffected}}
+                        {{localize (lookup ../d100Aconfig.abilities modifier.valueAffected)}}
+
+
+
                     {{else if (eq modifier.effectType "skill")}}
                         {{lookup ../config.skills modifier.valueAffected}}
                     {{else if (eq modifier.effectType "save")}}
