--- a/templates/hud/token-hud.html
+++ b/templates/hud/token-hud.html
@@ -23,6 +23,12 @@
         </div>
         {{/if}}
         {{#if (not isSpaceActor)}}
+        <div class="lightAngle">
+            <!-- <i class="fas fa-angle-up"></i> -->
+            <input type="text" name="lightAngle" value="{{lightAngle}}">
+        </div>
+
+
         <div class="attribute elevation">
             <!-- <i class="fas fa-angle-up"></i> -->
             <input type="text" name="elevation" value="{{elevation}}">
