--- a/templates/items/pharmaceutical.html
+++ b/templates/items/pharmaceutical.html
@@ -18,11 +18,11 @@
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
-            <h3 class="form-header">Consumable Details</h3>
+            <h3 class="form-header">Pharmaceutical Details</h3>
 
-            {{!-- Consumable Type --}}
+            {{!-- Pharmaceutical Type --}}
             <div class="form-group">
-                <label>{{ localize "SFRPG.Items.Consumable.Type" }}</label>
+                <label>{{ localize "SFRPG.Items.Pharmaceutical.Type" }}</label>
                 <select name="system.consumableType">
                     {{#select itemData.consumableType}}
                     {{#each config.consumableTypes as |name type|}}
@@ -34,27 +34,27 @@
 
             <br />
 
-            <h3 class="form-header">{{ localize "SFRPG.Items.Consumable.Usage" }}</h3>
+            <h3 class="form-header">{{ localize "SFRPG.Items.Pharmaceutical.Usage" }}</h3>
 
             {{!-- Item Activation Template --}}
             {{> "systems/Alternityd100/templates/items/parts/item-activation.html"}}
 
-            {{!-- Consumable Usage --}}
+            {{!-- Pharmaceutical Usage --}}
             {{#if itemData.activation.type}}
             <div class="form-group">
-                <label>{{ localize "SFRPG.Items.Consumable.Usage" }}</label>
+                <label>{{ localize "SFRPG.Items.Pharmaceutical.Usage" }}</label>
                 <label class="checkbox">
-                    <input type="checkbox" name="system.uses.autoUse" {{checked itemData.uses.autoUse}}/> {{ localize "SFRPG.Items.Consumable.OnUse" }}
+                    <input type="checkbox" name="system.uses.autoUse" {{checked itemData.uses.autoUse}}/> {{ localize "SFRPG.Items.Pharmaceutical.OnUse" }}
                 </label>
                 <label class="checkbox">
-                    <input type="checkbox" name="system.uses.autoDestroy" {{checked itemData.uses.autoDestroy}}/> {{ localize "SFRPG.Items.Consumable.DestroyWhenEmpty" }}
+                    <input type="checkbox" name="system.uses.autoDestroy" {{checked itemData.uses.autoDestroy}}/> {{ localize "SFRPG.Items.Pharmaceutical.DestroyWhenEmpty" }}
                 </label>
             </div>
             {{/if}}
 
             <br />
 
-            <h3 class="form-header">{{ localize "SFRPG.Items.Consumable.Action" }}</h3>
+            <h3 class="form-header">{{ localize "SFRPG.Items.Pharmaceutical.Action" }}</h3>
 
             {{!-- Item Action Template --}}
             {{> "systems/Alternityd100/templates/items/parts/item-action.html"}}
